--- a/product.html
+++ b/product.html
@@ -27,6 +27,7 @@
       <a class="active" href="product.html">Products</a>
       <a href="contact.html">Contact</a>
       <a href="about.html">About</a>
+      <a href="login.html">Login</a>
     </div>
     <div
       class="product-bit-title text-center"
