--- a/login.html
+++ b/login.html
@@ -18,69 +18,31 @@
     />
   </head>
   <body>
-    <div class="topnav" style="background-color: #333; overflow: hidden">
-      <a
+    <nav style="width: 100%">
+      <ul
         style="
-          float: left;
-          color: #f2f2f2;
+          height: 50px;
+          margin: 0;
+          display: flex;
           text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-          font-size: 17px;
+          justify-content: center;
+          align-items: center;
         "
-        href="index.html"
-        >Home</a
       >
-      <a
-        style="
-          float: left;
-          color: #f2f2f2;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-          font-size: 17px;
-        "
-        href="product.html"
-        >Products</a
-      >
-      <a
-        style="
-          float: left;
-          color: #f2f2f2;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-          font-size: 17px;
-        "
-        href="contact.html"
-        >Contact</a
-      >
-      <a
-        style="
-          float: left;
-          color: #f2f2f2;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-          font-size: 17px;
-        "
-        href="about.html"
-        >About</a
-      >
-      <a
-        style="
-          float: left;
-          color: #f2f2f2;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-          font-size: 17px;
-        "
-        class="active"
-        href="login.html"
-        >Login</a
-      >
-    </div>
+        <li><a href="index.html">Home</a></li>
+        <li>
+          <a href="product.html">Products</a>
+          <ul>
+            <li><a href="product.html">Smartphones</a></li>
+            <li><a href="led.html">LED's</a></li>
+            <li><a href="camera.html">Laptops</a></li>
+          </ul>
+        </li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a class="active" href="login.html">Login</a></li>
+      </ul>
+    </nav>
 
     <div
       class="containerss"
